service/EndpointSlice11_1.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: endpoint-slice-1
  labels:
    kubernetes.io/service-name: service-1
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.1.2.3"
    conditions:
      ready: true
    hostname: pod-1
    nodeName: minikube

#kubectl get endpointslice
#kubectl describe endpointslice endpoint-slice-1

#more param for pod
#minikube ip
