service/Ingress12_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
  labels:
    app: ingress-1
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8083
      targetPort: 8083
      name: p-s-1
  selector:
    app: deployment-1


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-1-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deployment-1 #важное имя для сервиса
  template:
    metadata:
      labels:
        app: deployment-1 #имя должно совпадать
    spec:
      containers:
        - name: i-1
          image: pavelk6896/10187native4-3:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
